# periaxis

./: .gitignore  LICENSE  README.md  notes
3DAssets/: Base_lower_cover_v175.stl  Base_v175.stl  Knuckle_v175.stl  link_left_v175.stl  link_right_v175.stl  tip_socket_v175.stl  tip_v175.stl
Docker/: Dockerfile  docker-compose.yml
Docker/src/dynamixel_sdk/: CMakeLists.txt  package.xml
Docker/src/periaxis_interfaces/: CMakeLists.txt  package.xml
Docker/src/periaxis_interfaces/msg/: GaitParameters.msg  LegGoalCoord.msg  SetPosition.msg
Docker/src/periaxis_interfaces/srv/: GetPosition.srv
Docker/src/periaxis_node/: CMakeLists.txt  package.xml
Docker/src/periaxis_node/config/: gait_config.yaml
Docker/src/periaxis_node/include/periaxis_node/: gait_controller.hpp  gait_master.hpp
Docker/src/periaxis_node/launch/: display_robot.launch.py  launch.py
Docker/src/periaxis_node/src/: dynamixel_read_write_node.cpp  gait_controller.cpp  gait_controller_node.cpp  gait_master.cpp  leg_kinematicSolver.cpp  translation_circle_tracer.cpp
Docker/src/periaxis_node/urdf/: periaxis_robot.xacro
periaxis_robot/launch/: config.rviz  rvizNP.launch
periaxis_robot/msg/: gaitParameters.msg
periaxis_robot/src/: dynamixel_read_write_node.cpp  gait_controller.cpp  gait_controller_broken.cpp  leg_kinematicSolver.cpp
periaxis_robot/srv/: matrix_3x3.srv
periaxis_robot/urdf/: periaxis_robot.xacro
src/periaxis_robot/: CMakeLists.txt  package.xml
src/periaxis_robot/launch/: rviz.launch
src/periaxis_robot/msg/: SetPosition.msg  legGoalCoord.msg
src/periaxis_robot/src/: dynamixel_read_write_node.cpp  gait_controller (another copy).cpp  gait_controller (copy).cpp  gait_controller.cpp  leg_kinematicSolver.cpp  leg_kinematicSolver_broken.cpp
src/periaxis_robot/urdf/: periaxis_robot (copy).xacro  periaxis_robot.xacro
src/urdf_tutorial-ros1/urdf/: periaxis_robot.urdf
