<?xml version="1.0"?>
<package format="2">
  <name>periaxis_robot</name>
  <version>0.0.0</version>
  <description>Personal project to try to build a 'axis' legged robot; to apply my skills to a real life task and test what i have been learning in mathmatics, robot kinematics, ROS, C++ and linux</description>
  <maintainer email="ace.janssenr@gmail.com">Ace Janssen</maintainer>
  <license>TBD</license>
  <author>Ace Janssen</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend> <!--C++ compiler-->
  <depend>std_msgs</depend> <!--standard ros message datatypes-->
  <depend>geometry_msgs</depend> <!--standard ros message datatypes-->
  <depend>dynamixel_sdk</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
