<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_sdk</name>
  <version>3.7.51</version>
  <description>
    This package is a ROS 2 wrapper for the ROBOTIS Dynamixel SDK. The Dynamixel SDK is a software development library providing control functions for packet communication with Dynamixel actuators and platforms.
  </description>
  <license>Apache-2.0</license>

  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author>Leon</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>

  <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_sdk/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/DynamixelSDK</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/DynamixelSDK/issues</url>

  <!-- Build and execution dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>Python3</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>Python3</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <!-- Export package metadata -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>