<?xml version="1.0"?>
<package format="3">
	<name>periaxis_interfaces</name>
	<version>0.2.0</version>
	<description>Personal project to build a 5 legged robot to rotate a world globe; to apply my skills to a real life task and test what i have been learning in mathematics, robot kinematics, ROS, C++ and linux</description>
	<maintainer email="ace.janssenr@gmail.com">ace.janssen</maintainer>
	<license>MIT</license>
	<author>ace.janssen</author>

	<!-- Build tool for ROS 2; ROS 2 interface generator for msg and srv files -->
	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend> <!-- Generates interfaces; contains rosidl_generator_cpp, rosidl_generator_c etc. -->
	
	<!-- ROS 2 dependencies -->
	<!-- <depend>rclcpp</depend> --><!-- ROS 2 C++ client library -->
	<!-- <depend>std_msgs</depend> --><!-- Standard message types -->
	<depend>sensor_msgs</depend> <!-- Standard message types, eg. JointState etc -->
	<depend>geometry_msgs</depend> <!-- Standard message types, eg. Point etc -->

	<!-- Interface Generation Dependencies (msg, srv, etc) -->
	<!-- <build_depend>rosidl_default_generators</build_depend> --><!-- Generates messages and service types (interfaces); contains rosidl_generator_cpp, rosidl_generator_c etc. -->
	
	<!-- Runtime support for generated interface types; contains rosidl_runtime_cpp, rosidl_runtime_c etc. -->
	<exec_depend>rosidl_default_runtime</exec_depend> 

	<!-- Tag as ROS 2 package which provides interface definitions (eg msg, srv, etc) -->
	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<!-- Tag as ROS 2 package via build system -->
		<build_type>ament_cmake</build_type>
	</export>
</package>